[package]
name = "slotmapvec"
version = "0.1.3"
license = "MIT"
authors = ["Bjørnar Luteberget <luteberget@gmail.com>"]
description = "Deprecated: use slotmap"
homepage = "https://github.com/luteberget/slotmapvec-rs"
repository = "https://github.com/luteberget/slotmapvec-rs"
readme = "README.md"
keywords = ["slotmap","slot","map"]
categories = ["data-structures"]
